--- a/http/views/home/index.html
+++ b/http/views/home/index.html
@@ -13,3 +13,6 @@
 <h1>Καλώς Ήρθατε ΣΠΙΤΙ!</h1>
 <h1>Evimize Hoş Geldiniz!</h1>
 <h1>Karibu NYUMBANI!</h1>
+
+<p>session started at: @timestamp</p>
+<p>view - at @view_timestamp</p>
